--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "sideEffects": false,
   "scripts": {
     "build": "remix build",
-    "deploy": "fly deploy --remote-only",
+    "deploy": "flyctl deploy --remote-only",
     "dev": "remix dev",
     "start": "remix-serve build",
     "typecheck": "tsc"
@@ -12,15 +12,17 @@
     "@remix-run/css-bundle": "^1.12.0",
     "@remix-run/node": "^1.12.0",
     "@remix-run/react": "^1.12.0",
-    "@remix-run/serve": "^1.12.0",
+    "@remix-run/serve": "1.11.0",
     "@vanilla-extract/css": "^1.9.5",
     "isbot": "^3.6.5",
+    "qs": "^6.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.12.0",
     "@remix-run/eslint-config": "^1.12.0",
+    "@types/qs": "^6.9.7",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "eslint": "^8.27.0",
@@ -29,5 +31,10 @@
   },
   "engines": {
     "node": ">=14"
+  },
+  "pnpm": {
+    "overrides": {
+      "esbuild": "^0.15.8"
+    }
   }
 }
